apps/gramnuri-api/overlays/dev/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gramnuri-api-httproute
  namespace: dev
spec:
  hostnames:
    - dev-api.landskipifyai.com
