apps/gramnuri-api/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gramnuri-api-ingress # This must match the name of the Ingress in the base
spec:
  rules:
    - host: dev-api.gramnuri.com # This is the overridden host for the dev environment
      http:
        paths:
          - path: / # You need to repeat the paths here for the merge to work correctly
            pathType: Prefix
            backend:
              service:
                name: gramnuri-api
                port:
                  number: 80
